import ScannerScreen from '@/templates/scanner'
import React from 'react'

const Scanner = () => {
  return <ScannerScreen />
}

export default Scanner
